deployment/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: releaseflow-service
  namespace: releaseflow
spec:
  selector:
    app: releaseflow
  ports:
    - port: 5000
      targetPort: 5000
  type: ClusterIP
